--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1 {
 .articulo-dos-index section h2, .articulo-uno-index section h2 {
   font-family: "DragonBallH";
   font-size: 7rem;
-  color: #ff0800;
+  color: #008cd0;
 }
 
 h3 {
@@ -40,7 +40,7 @@ h3 {
 footer section div a, .articulo-uno-index section p {
   font-family: "DragonBallText";
   font-size: 3rem;
-  color: #008cd0;
+  color: #ff0800;
 }
 
 .conteiner-musica section div p {
@@ -54,18 +54,18 @@ body {
 }
 
 header {
-  background-image: url(../assets/img/banner.jpg);
+  background-image: url(../assets/img/fondo1.jpg);
   background-size: cover;
   background-position-x: center;
   height: 660px;
 }
 
 .articulo-uno-index {
-  background-image: url(../assets/img/fondo2.jpg);
+  background-image: url(../assets/img/fondo6.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position-x: right;
+  background-position-y: 26%;
 }
 .articulo-uno-index section {
   display: flex;
@@ -90,7 +90,7 @@ header {
   justify-content: center;
   align-items: center;
   width: 28rem;
-  height: 660px;
+  height: auto;
 }
 .articulo-dos-index section .card .card-img-1 {
   width: 55%;
@@ -114,7 +114,7 @@ header {
 
 @media only screen and (max-width: 768px) {
   .articulo-uno-index {
-    background-position-x: right;
+    background-position-x: 43%;
   }
   .articulo-uno-index section {
     display: flex;
@@ -168,7 +168,7 @@ header {
 
 @media only screen and (min-width: 769px) and (max-width: 991px) {
   .articulo-uno-index {
-    background-position-x: right;
+    background-position-x: 43%;
   }
   .articulo-uno-index section {
     display: flex;
@@ -237,6 +237,9 @@ header section div .bg-dark {
 header section div nav {
   padding: 0% !important;
   margin: 0% !important;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 header section div nav a {
   font-weight: 900;
@@ -284,10 +287,13 @@ header section div nav .dropdown-item:hover {
 @media only screen and (max-width: 768px) {
   header {
     background-position-x: center;
-    height: 875px;
+    height: auto;
   }
   header section div .bg-dark {
     flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-content: center;
   }
   header section div nav a {
     font-weight: 900;
@@ -295,8 +301,9 @@ header section div nav .dropdown-item:hover {
     padding-left: 0% !important;
   }
   header section div nav a .nav-img-logo {
-    width: 200px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
+    padding-top: 25%;
   }
   header section div nav .dropdown-item {
     color: #ff0800;
@@ -317,7 +324,8 @@ header section div nav .dropdown-item:hover {
 @media only screen and (min-width: 769px) and (max-width: 991px) {
   header {
     background-position-x: center;
-    height: 900px;
+    height: auto;
+    background-position-y: 12%;
   }
   header section div .bg-dark {
     flex-direction: row;
@@ -345,7 +353,7 @@ header section div nav .dropdown-item:hover {
 @media only screen and (min-width: 992px) and (max-width: 1185px) {
   header {
     background-position-x: center;
-    height: 594px;
+    height: 575px;
   }
   header section div .bg-dark {
     background-color: #80808000 !important;
@@ -468,7 +476,7 @@ main {
 }
 
 .container-sagas {
-  background-image: url(../assets/img/fondo3.jpg);
+  background-image: url(../assets/img/fondo7.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -506,10 +514,10 @@ h3 {
 .arrow-up section div a {
   position: fixed;
   top: 85%;
+  right: 1%;
 }
 .arrow-up section div a img {
   width: 100px;
-  margin-left: 380%;
   background-color: #a23a1b8f;
   border-radius: 30%;
 }
@@ -603,14 +611,14 @@ td {
 
 /*Fin de Todos los logos Dragon ball*/
 /*Mediasquery Movile*/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .container-sagas {
     background-size: contain;
-    background-position-x: right;
+    background-position-y: center;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .article-redireccion section {
     align-items: center;
     margin-top: 5%;
@@ -622,7 +630,7 @@ td {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .sagas-db section div {
     display: flex;
     justify-content: center;
@@ -633,7 +641,7 @@ td {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .div-contenedor-carrucel {
     display: flex;
     justify-content: center;
@@ -654,19 +662,19 @@ td {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .saga-img-sagas img {
     width: 100%;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   h3 {
     font-size: 2.5rem;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   table {
     border: solid 1px #008cd0;
     width: 98%;
@@ -676,25 +684,25 @@ td {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   tr {
     border: solid 1px #008cd0;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   th {
     border: solid 1px #008cd0;
     text-align: center;
     font-family: "DragonBallText";
     color: #008cd0;
-    font-size: 1rem;
+    font-size: 1.5rem;
     letter-spacing: 1px;
     height: 125px;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   td {
     border: solid 1px #008cd0;
     text-align: center;
@@ -706,7 +714,7 @@ td {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .arrow-up section div {
     display: flex;
     justify-content: flex-end;
@@ -718,7 +726,155 @@ td {
   }
   .arrow-up section div a img {
     width: 50px;
-    margin-left: 23%;
+    background-color: #a23a1b8f;
+    border-radius: 30%;
+  }
+}
+
+/*Mediasquery Tablet*/
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  h1 {
+    font-size: 6.5rem;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .container-sagas {
+    background-size: contain;
+    background-position-y: center;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .article-redireccion section {
+    align-items: center;
+    margin-top: 5%;
+  }
+  .article-redireccion section div a {
+    display: flex;
+    justify-content: center;
+  }
+  .article-redireccion section div a img {
+    width: 400px;
+    margin-left: 0%;
+    margin-top: 15%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .sagas-db section div {
+    display: flex;
+    justify-content: center;
+  }
+  .sagas-db section div .img-logo-db {
+    width: 100%;
+    margin: 10% 1%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .div-contenedor-carrucel {
+    display: flex;
+    justify-content: center;
+  }
+  .div-contenedor-carrucel .carousel {
+    width: 100%;
+  }
+  .div-contenedor-carrucel .carousel .carousel-inner .carousel-item .card {
+    width: 100%;
+    height: 700px;
+  }
+  .div-contenedor-carrucel .carousel .carousel-inner .carousel-item .card .img-card-vertical {
+    width: 100%;
+    height: 530px;
+  }
+  .div-contenedor-carrucel .carousel .carousel-inner .carousel-item .card img {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .saga-img-sagas img {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  h3 {
+    font-size: 5.5rem;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  table {
+    border: solid 1px #008cd0;
+    width: 98%;
+    border-collapse: collapse;
+    margin: 1% 0%;
+    background-color: #ffffffa8;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  tr {
+    border: solid 1px #008cd0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  th {
+    border: solid 1px #008cd0;
+    text-align: center;
+    font-family: "DragonBallText";
+    color: #008cd0;
+    font-size: 3rem;
+    letter-spacing: 1px;
+    height: 125px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  td {
+    border: solid 1px #008cd0;
+    text-align: center;
+    font-family: "DragonBallText";
+    color: #008cd0;
+    font-size: 2.5rem;
+    letter-spacing: 1px;
+    height: 125px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .arrow-up section div {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .arrow-up section div a {
+    position: fixed;
+    top: 85%;
+    z-index: 10;
+  }
+  .arrow-up section div a img {
+    width: 75px;
+    background-color: #a23a1b8f;
+    border-radius: 30%;
+  }
+}
+
+/*Mediasquery Desktop*/
+@media only screen and (min-width: 992px) and (max-width: 1875px) {
+  .arrow-up section div {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .arrow-up section div a {
+    position: fixed;
+    top: 85%;
+    z-index: 10;
+  }
+  .arrow-up section div a img {
+    width: 75px;
     background-color: #a23a1b8f;
     border-radius: 30%;
   }
@@ -726,17 +882,22 @@ td {
 
 /*Background de main*/
 .container-musica {
-  background-image: url(../assets/img/chino4.jpg);
+  background-image: url(../assets/img/fondo2.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
 }
 
 /*Fin Background de main*/
 /*redireccion a sub paginas*/
-.img-musica-direccion {
+.img-musica-direccion section div a {
+  display: flex;
+  justify-content: center;
+}
+.img-musica-direccion section div a img {
   width: 50%;
-  margin: 5% 0% 10% 20%;
+  margin-top: 5%;
 }
 
 /*fin de redireccion a sub paginas*/
@@ -770,9 +931,55 @@ td {
 }
 .conteiner-musica section div iframe {
   margin-bottom: 5%;
+  width: 600px;
+  height: 365px;
 }
 
 /*Fin de P y Videos*/
+/*MediasQueri tablet Grande*/
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .conteiner-musica section div iframe {
+    margin-bottom: 5%;
+    width: 500px;
+    height: 270px;
+  }
+}
+
+/*MediasQueri Movile*/
+@media only screen and (max-width: 991px) {
+  .conteiner-musica section div iframe {
+    margin-bottom: 5%;
+    width: 330px;
+    height: 210px;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .container-musica {
+    background-size: contain;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  #opening section div {
+    display: flex;
+    justify-content: center;
+  }
+  #opening section div img {
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  #ending section div {
+    display: flex;
+    justify-content: center;
+  }
+  #ending section div img {
+    width: 95%;
+  }
+}
+
 .container-videojuegos {
   background-image: url(../assets/img/fondo4.jpg);
   background-repeat: no-repeat;
@@ -789,6 +996,9 @@ td {
   font-size: 3rem;
   text-decoration: none;
   padding: 10% 10%;
+}
+.container-videojuegos .article-videojuegos-width section .col-lg-1 {
+  width: auto;
 }
 .container-videojuegos #collapseFour .card-body {
   display: flex;
@@ -815,12 +1025,20 @@ td {
   align-items: center;
 }
 .container-videojuegos .Videojuegos-acordeon-img {
-  width: 35%;
+  width: 55%;
   height: 500px;
 }
 .container-videojuegos .card-body {
   display: flex;
   align-items: center;
+}
+
+/*MediasQuery Tablet Grande*/
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .Videojuegos-acordeon-img {
+    width: 35%;
+    height: 500px;
+  }
 }
 
 .main-personajes {
