--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -16,6 +16,9 @@ header{
             nav{
                 padding: 0% !important;
                 margin: 0% !important;
+                display: flex;
+                justify-content: center;
+                align-content: center;
                 a{
                     .nav-img-logo{
                         width: 300px;
@@ -52,6 +55,7 @@ header{
         color: #ff0800;
     }
 }
+
 /*Media Query de Boostrap*/
 .navbar-expand-lg {
     @media (min-width: 992px){
@@ -64,17 +68,22 @@ header{
 header{
     @media only screen and (max-width:768px){
         background-position-x: center;
-        height:875px;
+        height:auto;
         section{
             div{
                 .bg-dark{
                     flex-direction: row;
+                    display: flex;
+                    justify-content: center;
+                    align-content: center;
                 }
                 nav{
                     a{
                         .nav-img-logo{
-                            width: 200px;
-                            height: 150px;
+                            width: 100%;
+                            height: 100%;
+                            padding-top: 25%;
+                            
                         }
                         font-weight: 900;
                         font-size: 30px;
@@ -105,7 +114,8 @@ header{
 header{
     @media only screen and (min-width:769px) and (max-width:991px){
         background-position-x: center;
-        height:900px;
+        height:auto;
+        background-position-y: 12%;
         section{
             div{
                 .bg-dark{
@@ -140,7 +150,7 @@ header{
 header{
     @media only screen and (min-width:992px) and (max-width:1185px){
         background-position-x: center;
-        height:594px;
+        height: 575px;
         section{
             div{
                 .bg-dark{
