--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -2,7 +2,7 @@ body{
     background-color: #000000;
 }
 header{
-    background-image: url(../assets/img/banner.jpg);
+    background-image: url(../assets/img/fondo1.jpg);
     background-size: cover;
     background-position-x: center;
     height: 660px;
@@ -11,11 +11,11 @@ h1{
     @extend %h1;       
 }
 .articulo-uno-index{
-    background-image: url(../assets/img/fondo2.jpg);
+    background-image: url(../assets/img/fondo6.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position-x: right;
+    background-position-y: 26%;
     section{
         display: flex;
         h2{
@@ -44,7 +44,7 @@ h1{
             justify-content: center;
             align-items: center;
             width: 28rem;
-            height: 660px;
+            height: auto;
             .card-img-1{
                 width: 55%;
             }
@@ -70,7 +70,7 @@ h1{
 }
 .articulo-uno-index{
     @media only screen and (max-width:768px){
-        background-position-x: right;
+        background-position-x: 43%;
     section{
         display: flex;
         h2{
@@ -127,7 +127,7 @@ h1{
 }
 .articulo-uno-index{
     @media only screen and (min-width:769px) and (max-width:991px){
-        background-position-x: right;
+        background-position-x: 43%;
     section{
         display: flex;
         h2{
