--- a/css/style.css
+++ b/css/style.css
@@ -1036,8 +1036,39 @@ td {
 /*MediasQuery Tablet Grande*/
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .Videojuegos-acordeon-img {
-    width: 35%;
-    height: 500px;
+    width: 70% !important;
+    height: 450px !important;
+  }
+}
+
+/*MediasQuery Tablet*/
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .Videojuegos-acordeon-img {
+    width: 100% !important;
+    height: 500px !important;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .container-videojuegos article section .div-top-videojuegos a {
+    font-size: 2rem;
+  }
+  .container-videojuegos .card-body {
+    flex-wrap: wrap;
+  }
+}
+
+/*MediasQuery Movile*/
+@media only screen and (max-width: 767px) {
+  .Videojuegos-acordeon-img {
+    width: 100% !important;
+    height: 250px !important;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .container-videojuegos article section .div-top-videojuegos a {
+    font-size: 1rem;
   }
 }
 
@@ -1054,8 +1085,12 @@ td {
   margin-top: 5%;
 }
 .main-personajes .modal-body img {
-  width: 100%;
-  height: 700px;
+  width: 70% !important;
+  height: 500px;
+}
+
+.carrucel-item-personajes {
+  margin-left: 12%;
 }
 
 .container-lista {
@@ -1078,6 +1113,58 @@ td {
 }
 .container-lista section div a:hover {
   color: #03405f;
+}
+
+/*MediasQuery Tablet Grande*/
+@media only screen and (min-width: 1100px) and (max-width: 1525px) {
+  .main-personajes .div-boton-personajes {
+    display: flex;
+    align-items: center;
+    height: 115px;
+    margin: 1%;
+    padding: 0% !important;
+  }
+  .main-personajes button {
+    width: 110px;
+    margin: 0%;
+    font-size: 0.9rem;
+  }
+  .main-personajes .modal-body img {
+    width: 70% !important;
+    height: 500px;
+  }
+}
+
+.carrucel-item-personajes {
+  margin-left: 12%;
+}
+
+/* MediasQuery Tablet */
+@media only screen and (min-width: 992px) and (max-width: 1099px) {
+  .main-personajes .div-boton-personajes {
+    display: flex;
+    align-items: center;
+    height: 115px;
+    margin: 2%;
+    padding: 0% !important;
+  }
+  .main-personajes button {
+    width: 110px;
+    margin: 0%;
+    font-size: 0.9rem;
+  }
+  .main-personajes .modal-body img {
+    width: 70% !important;
+    height: 500px;
+  }
+}
+
+/* MediasQuery Movile */
+@media only screen and (max-width: 991px) {
+  .main-personajes .modal-body img {
+    width: 60% !important;
+    height: 400px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
