--- a/scss/pages/_personajes.scss
+++ b/scss/pages/_personajes.scss
@@ -11,10 +11,13 @@
     }
     .modal-body{
         img{
-            width: 100%;
-            height: 700px;
+            width: 70% !important;
+            height: 500px;
         }
     }
+}
+.carrucel-item-personajes{
+    margin-left: 12%;
 }
 .container-lista{
     border: solid 1px grey;
@@ -37,4 +40,67 @@
 
         }
     }
+}
+/*MediasQuery Tablet Grande*/
+.main-personajes{
+    @media only screen and (min-width:1100px) and (max-width:1525px){
+    .div-boton-personajes{
+        display: flex;
+        align-items: center;
+        height: 115px;
+        margin: 1%;
+        padding: 0% !important;
+
+    }
+    button{
+        width: 110px;
+        margin: 0%;
+        font-size: 0.9rem;
+    }
+    .modal-body{
+        img{
+            width: 70% !important;
+            height: 500px;
+        }
+    }
+}
+}
+.carrucel-item-personajes{
+    margin-left: 12%;
+}
+
+/* MediasQuery Tablet */
+.main-personajes{
+    @media only screen and (min-width:992px) and (max-width:1099px){
+    .div-boton-personajes{
+        display: flex;
+        align-items: center;
+        height: 115px;
+        margin: 2%;
+        padding: 0% !important;
+
+    }
+    button{
+        width: 110px;
+        margin: 0%;
+        font-size: 0.9rem;
+    }
+    .modal-body{
+        img{
+            width: 70% !important;
+            height: 500px;
+        }
+    }
+}
+}
+/* MediasQuery Movile */
+.main-personajes{
+    @media only screen and (max-width:991px){
+    .modal-body{
+        img{
+            width: 60% !important;
+            height: 400px;
+        }
+    }
+}
 }
