--- a/scss/pages/_videojuegos.scss
+++ b/scss/pages/_videojuegos.scss
@@ -72,8 +72,51 @@
 }
 /*MediasQuery Tablet Grande*/
 .Videojuegos-acordeon-img{
-    @media only screen and (min-width:992px)and (max-width:1199px){
-    width: 35%;
-    height: 500px;
+    @media only screen and (min-width:992px) and (max-width:1199px){
+    width: 70% !important;
+    height: 450px !important;
 }
+}
+/*MediasQuery Tablet*/
+.Videojuegos-acordeon-img{
+    @media only screen and (min-width:768px)and (max-width:991px){
+    width: 100% !important;
+    height: 500px !important;
+}
+}
+.container-videojuegos{
+    @media only screen and (min-width:768px)and (max-width:991px){
+        article{
+            section{
+                .div-top-videojuegos{
+                    a{
+                        font-size: 2rem;
+                    }
+                }
+            }
+        }
+        .card-body{
+                flex-wrap: wrap;
+        }
+}
+}
+/*MediasQuery Movile*/
+.Videojuegos-acordeon-img{
+    @media only screen and (max-width:767px){
+    width: 100% !important;
+    height: 250px !important;
+}
+}
+.container-videojuegos{
+    @media only screen and (max-width:767px){
+    article{
+        section{
+            .div-top-videojuegos{
+                a{
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
+ }
 }
