--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -103,7 +103,7 @@ header{
 }
 .navbar-dark .navbar-toggler {
     @media only screen and (max-width:768px){
-        border: solid 4px #01d9da;
+        border: solid 4px #ff7b00;
         width: 80px;
         height: 80px;
         margin-right: 7%;
@@ -139,7 +139,7 @@ header{
 }
 .navbar-dark .navbar-toggler {
     @media only screen and (min-width:769px) and (max-width:991px){
-        border: solid 4px #01d9da;
+        border: solid 4px #ff7b00;
         width: 80px;
         height: 80px;
         margin-right: 7%;
