--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -22,6 +22,13 @@
     font-family: 'DragonBallText';
     font-size: 3rem;
     color:#ff0800;
+    -webkit-text-stroke: 2px;
+    -webkit-text-stroke-color: #000000;
+}
+%pFooter{
+    font-family: 'DragonBallText';
+    font-size: 3rem;
+    color:#ff0800;
 }
 %pMusica{
     font-family: 'DragonBallText';
