--- a/scss/pages/_personajes.scss
+++ b/scss/pages/_personajes.scss
@@ -8,6 +8,7 @@
     button{
         width: 125px;
         margin-top: 5%;
+        border: solid 2px #ff0800;
     }
     .modal-body{
         img{
@@ -20,7 +21,7 @@
     margin-left: 12%;
 }
 .container-lista{
-    border: solid 1px grey;
+    border: solid 1px #808080;
     width: 80%;
     margin-top: 1%;
     section{
