modificado de h en personajes

--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -12,6 +12,11 @@
     font-size: 7rem;
     color: #008cd0;
 }
+%h2Personajes{
+    font-family: 'DragonBallH';
+    font-size: 7rem;
+    color: #ff0800;
+}
 %h3{
     font-family: 'DragonBallH';
     font-size: 6.7rem;
