--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -16,6 +16,9 @@
     font-family: 'DragonBallH';
     font-size: 7rem;
     color: #ff0800;
+    text-align: center;
+    text-decoration: underline;
+    margin: 3% 0%; 
 }
 %h3{
     font-family: 'DragonBallH';
