--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -44,6 +44,7 @@ footer{
                 }
                 img{
                     width: 110px;
+                    height: auto;
                     margin-top: 2%;
                }
             }
@@ -74,6 +75,7 @@ footer{
                     }
                     img{
                         width: auto;
+                        height: auto;
                    }
                 }
             }
@@ -104,6 +106,7 @@ footer{
                     }
                     img{
                         width: 100px;
+                        height: auto;
                    }
                 }
             }
